--- a/src/content/docs/reference/Mod/DH/dh_shaders.mdx
+++ b/src/content/docs/reference/Mod/DH/dh_shaders.mdx
@@ -16,3 +16,4 @@ The shaders below are known to work with DH. If your shader is missing please co
 | [Noble](https://github.com/BelmuTM/Noble/archive/refs/heads/master.zip)                                          | BelmuTM         |
 | [Shrimple](https://github.com/Null-MC/Shrimple/archive/refs/heads/main.zip)                                      | Null-MC         |
 | [CTMPOMFIX](https://www.curseforge.com/minecraft/shaders/ctmpomfix-shader-chocapic13-shaders-edit/files/5111816) | timetravelbeard |
+| [Simply Upscaled](https://modrinth.com/shader/simply-upscaled) | timetravelbeard |
