--- a/src/content/docs/404.mdx
+++ b/src/content/docs/404.mdx
@@ -12,3 +12,9 @@ import { LinkCard } from '@astrojs/starlight/components';
   title="Go to home"
   href="/"
 />
+
+
+*Psst*  
+Can you hear me? *Shhhh*, don't say anything. They're watching...  
+Listen, I can't explain here, take this: [(handwritten note)](https://shader.properties)  
+Be careful, I'll catch up with you later.
