feat: programs: added overview

--- a/src/content/docs/reference/Programs/shadow_comp.mdx
+++ b/src/content/docs/reference/Programs/shadow_comp.mdx
@@ -1,9 +1,9 @@
 ---
-title: shadow_comp
+title: shadowcomp
 description: Shadowcomp Programs
 sidebar:
-  label: shadow_comp
-  order: 4
+  label: shadowcomp
+  order: 5
 ---
 
 **Required stages**: vertex (.vsh), fragment (.fsh)  
