--- a/src/content/docs/reference/Shaders.Properties/allowConcurrentCompute.mdx
+++ b/src/content/docs/reference/Shaders.Properties/allowConcurrentCompute.mdx
@@ -64,3 +64,7 @@ There are two ways to mitigate this issue:
 - An in-depth pair of blog posts touching on using advanced concurrency techniques in compute shaders specifically in the context of Minecraft path-tracing shaders has been published by BruceKnowsHow:
     - [Good and Bad Conditional Branching in GPU Shaders](https://lavish-waitress-2da.notion.site/Good-and-Bad-Conditional-Branching-in-GPU-Shaders-17cca16e30be4e38baef9c9166ac4c24)
     - [Branchless Multi-Bounce Path-Tracing with a Ray-Buffer](https://lavish-waitress-2da.notion.site/Branchless-Multi-Bounce-Path-Tracing-with-a-Ray-Buffer-c9cd87ff41bd455b8dd8d629011167b0)
+
+
+#### Credit
+This page is taken from the [Iris ShaderDoc](https://github.com/IrisShaders/ShaderDoc/blob/master/passes/compute.md#concurrency-between-compute-passes) by IMS.
