--- a/src/content/docs/reference/Programs/overview.mdx
+++ b/src/content/docs/reference/Programs/overview.mdx
@@ -25,18 +25,18 @@ The shader code of a stage of a program should be located in the file `<program_
 ## Program Order
 The following is the list of shader programs in the order they're executed:
 
-| Shader Programs                                        | Program Type    |
-| ------------------------------------------------------ | --------------- |
-| [setup](/reference/programs/setup) (1-99)              | Compute Only    |
-| [begin](/reference/programs/begin) (1-99)              | Composite-Style |
-| [shadow](/reference/programs/shadow)                   | Gbuffers-Style  |
-| [shadowcomp](/reference/programs/shadow_comp) (1-99)   | Composite-Style |
-| [prepare](/reference/programs/prepare) (1-99)          | Composite-Style |
-| [gbuffers](/reference/programs/gbuffers) (opaque)      | Gbuffers-Style  |
-| [deferred](/reference/programs/deferred) (1-99)        | Composite-Style |
-| [gbuffers](/reference/programs/gbuffers) (translucent) | Gbuffers-Style  |
-| [composite](/reference/programs/composite) (1-99)      | Composite-Style |
-| [final](/reference/programs/final)                     | Composite-Style |
+| Shader Programs                                                   | Program Type    |
+| ----------------------------------------------------------------- | --------------- |
+| [setup](/reference/programs/setup) (no suffix, 1-99)              | Compute Only    |
+| [begin](/reference/programs/begin) (no suffix, 1-99)              | Composite-Style |
+| [shadow](/reference/programs/shadow)                              | Gbuffers-Style  |
+| [shadowcomp](/reference/programs/shadow_comp) (no suffix, 1-99)   | Composite-Style |
+| [prepare](/reference/programs/prepare) (no suffix, 1-99)          | Composite-Style |
+| [gbuffers](/reference/programs/gbuffers) (opaque)                 | Gbuffers-Style  |
+| [deferred](/reference/programs/deferred) (no suffix, 1-99)        | Composite-Style |
+| [gbuffers](/reference/programs/gbuffers) (translucent)            | Gbuffers-Style  |
+| [composite](/reference/programs/composite) (no suffix, 1-99)      | Composite-Style |
+| [final](/reference/programs/final)                                | Composite-Style |
 
 > **Note**: Other than some [gbuffers](/reference/programs/gbuffers) programs being before/after [deferred](/reference/programs/deferred), the order of gbuffers programs is not fixed.
 
@@ -45,18 +45,18 @@ Gbuffers-style programs render the actual geometry of Minecraft, such as blocks,
 > **Note**: These are the only programs with direct access to geometry specific information through vertex attributes (and certain uniforms).
 
 #### Composite-Style
-Composite-style programs render a single quad covering the output texture (unless only compute shaders are present). These programs consist of the [begin](/reference/programs/begin), [shadowcomp](/reference/programs/shadowcomp), [prepare](/reference/programs/prepare), [deferred](/reference/programs/deferred), [composite](/reference/programs/composite), and [final](/reference/programs/final) programs. These programs don't have direct access to any geometry attributes, and instead rely on reading information from textures, buffers, or uniforms. Composite-style programs are commonly used for post-processing effects, deferred rendering, and compute passes. Each composite-style pass can include up to 100 programs by adding a suffix (1 to 99) in addition to a program with no suffix.
+Composite-style programs render a single quad covering the output texture (unless only compute shaders are present). These programs consist of the [begin](/reference/programs/begin), [shadowcomp](/reference/programs/shadowcomp), [prepare](/reference/programs/prepare), [deferred](/reference/programs/deferred), [composite](/reference/programs/composite), and [final](/reference/programs/final) programs. These programs don't have direct access to any geometry attributes, and instead rely on reading information from textures, buffers, or uniforms. Composite-style programs are commonly used for post-processing effects, deferred rendering, and compute passes. Each composite-style pass can include up to 100 programs by adding a suffix (1 to 99) in addition to a program with no suffix. [final](/reference/programs/final) is the only exception, as there can only be one final program.
 
-All shader stages are supported for composite-style programs (vertex, fragment, geometry, tessellation, and compute). Usually composite-style programs require vertex and fragment shaders, however if a compute shader is present these are optional. Compute shaders will be executed before the vertex stage of a given program.
+Composite-style programs support vertex, fragment, geometry, and compute stages. Usually composite-style programs require vertex and fragment shaders, however if a compute shader is present these are optional. Compute shaders (if present) will be executed before the vertex stage of a given program.
 
 #### Compute Only
-As the name suggests, compute only programs only support compute shaders. The only such programs are the [setup](/reference/programs/setup) programs, which are executed once after shader load and during window resize. Like composite passes, [setup](/reference/programs/setup) supports suffixes (1 to 99) in addition to a program with no suffix.
+As the name suggests, compute only programs only support compute shaders. The only such programs are in the [setup](/reference/programs/setup) pass, which are executed once after shader load and during window resize. Like composite passes, [setup](/reference/programs/setup) supports suffixes (1 to 99) in addition to a program with no suffix.
 
 
 ## Compute Shaders
 Compute shaders break the OpenGL fixed pipeline and allow more direct access to graphics hardware. For more information, see the [Khronos Wiki](https://www.khronos.org/opengl/wiki/Compute_Shader).
 
-In Iris, compute shaders can be used in compute only programs, or included in composite-style programs. In composite-style programs, compute shaders will always execute first (before the vertex stage if present). Up to 27 compute shaders files can be included in a single program by appending the `_a` through `_z` suffixes to the filename in addition to a shader file with no suffix. These shaders will execute one after the other in alphabetical order (starting with the no-suffix file if present), unless [`allowConcurrentCompute`](/reference/shadersproperties/allowconcurrentcompute) is used (in which case they will execute potentially simultaneously but will all finish before starting the vertex stage).
+In Iris, compute shaders can be used in compute only pass, or included in composite-style passes, using the `.csh` file extension. In composite-style passes, compute shaders will always execute first (before the vertex stage if present). Up to 27 compute shaders files can be included in a single pass by appending the `_a` through `_z` suffixes to the filename in addition to a shader file with no suffix. These shaders will execute one after the other in alphabetical order (starting with the no-suffix file if present), unless [`allowConcurrentCompute`](/reference/shadersproperties/allowconcurrentcompute) is used (in which case they will execute potentially simultaneously but will all finish before starting the vertex stage).
 
 Local size is defined as follows: `layout (local_size_x = <size_x>, local_size_y = <size_x>, local_size_y = <size_z>) in;`.
 
@@ -72,4 +72,6 @@ Unlike fragment shaders, compute shaders cannot directly write to color attachme
 
 ## Tessellation Shaders
 
-TBD
+Tessellation shaders allow splitting of a single triangle into multiple triangles during runtime. This can be used to add more detail to displaced geometry such as for waving water effects or displacement maps. For more information, see the [Khronos Wiki](https://www.khronos.org/opengl/wiki/tessellation).
+
+Iris supports tessellation only for gbuffers-style passes. It recognizes the tessellation control shader in a `.tcs` file, and the tessellation evaluation shader in a `.tes` file. Only triangles are supported (no quads or isolines). The [`TESSELATION_SHADERS`](/reference/shadersproperties/flags) feature flag is required to use tessellation shaders.
