--- a/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
@@ -1,5 +1,5 @@
 ---
-title: biome_percipitation
+title: biome_precipitation
 description: biome_percipitation
 sidebar:
   label: biome_precipitation
