--- a/src/content/docs/reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Shaders.Properties/flags.mdx
@@ -12,6 +12,7 @@ sidebar:
 #### Location: shaders.properties
 
 Feature flags are an Iris system to query the activation state of certain features. To activate them there are two directives that can be placed in `shaders.properties`: `iris.features.required` and `iris.features.optional`. `iris.features.required` will throw an error if your device or version of Iris does not support the feature. `iris.features.optional` will create a define that can be used to test the availability of such a feature. Additionally the `IS_IRIS` define can be used to test if your shader is in Iris or optifine, and always exists.
+
 <br/>
 To use the flags add the following to your `shaders.properties`:
 ```properties
@@ -19,7 +20,18 @@ iris.features.required=SEPARATE_HARDWARE_SAMPLERS COMPUTE_SHADERS
 iris.features.optional=BLOCK_EMISSION_ATTRIBUTE ENTITY_TRANSLUCENT SSBO
 ```
 
-The following are currently valid options:
+<br>
+
+The define an optional feature flag creates is in the format `IRIS_FEATURE_<feature>`. For example, if you had:
+```properties
+iris.features.optional=BLOCK_EMISSION_ATTRIBUTE
+```
+Then you could check for this with
+```glsl
+#ifdef IRIS_FEATURE_BLOCK_EMISSION_ATTRIBUTE
+```
+
+The following are currently valid feature flags:
 
 `SEPARATE_HARDWARE_SAMPLERS` (required for [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex))
 
