feat: shaders.properties: added .lang file

--- a/src/content/docs/reference/Shaders.Properties/overview.mdx
+++ b/src/content/docs/reference/Shaders.Properties/overview.mdx
@@ -14,7 +14,7 @@ The `shaders.properties` is a text file placed in the `shaders` folder that allo
 
 ## Internal Shader Settings
 The file can contain any of the properties described in this section, in any order. These properties control both aspects of the shader itself, and allow for defining user accessible shader options. For example:
-```
+```properties
 iris.features.required = CUSTOM_IMAGES COMPUTE_SHADERS SSBO REVERSED_CULLING 
 separateEntityDraws = true
 shadow.culling = reversed
