--- a/src/content/docs/reference/Shaders.Properties/profile.mdx
+++ b/src/content/docs/reference/Shaders.Properties/profile.mdx
@@ -27,8 +27,8 @@ profile.<name> = <list_of_options>
 
 #### Example
 Here's a free example
-```
+```properties
 profile.LOW  = !SSAO ShadowType=1 SSR:false !program.composite2
-profile.MED  = SSAO  ShadowType=2 SSR:false !program.composite2
-profile.HIGH = SSAO  ShadowType=3 SSR:true
+profile.MED  =  SSAO ShadowType=2 SSR:false !program.composite2
+profile.HIGH =  SSAO ShadowType=3 SSR:true
 ```
