--- a/src/content/docs/reference/Shaders.Properties/screen.mdx
+++ b/src/content/docs/reference/Shaders.Properties/screen.mdx
@@ -41,7 +41,7 @@ screen.<screen_name>.columns = <number_of_columns>
 
 ### Example
 Here's a nice example to hopefully clear things up (*I hope you like ice cream*):
-```
+```properties
 screen = <empty> <profile> <empty> [SHADOWS] [LIGHTING] iScreem uScreem weAllScreen forIceCreen *
 screen.SHADOWS = shadowMapResolution shadowFilter
 screen.LIGHTING = SSAO SSR
