--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -44,7 +44,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 A big thanks to the many people below who make this site work. This would not be the same without you.
 
 - WhyFencePost: Project lead, page design, data transfer
-- NinjaMike: Many uniforms including Iris exclusive uniforms
+- NinjaMike: Much of the documentation, including many uniforms, attributes, constants, macros, shaders.properties docs, and more 
 - IMS: Setting up the page, general support of the site and also the URL
 - Kixys: Main banner image
 - JoshTheB: Added a number of uniforms
