feature: attributes: added overview, updated at_tangent handedness

--- a/src/content/docs/reference/Attributes/at_tangent.mdx
+++ b/src/content/docs/reference/Attributes/at_tangent.mdx
@@ -3,7 +3,7 @@ title: at_tangent
 description: at_tangent
 sidebar:
   label: at_tangent
-  order: 1
+  order: 2
 ---
 
 ### `in vec4 at_tangent;`
@@ -12,4 +12,11 @@ sidebar:
 
 ---
 
-The tangent vector in model space. The x,y,z components store the tangent, and the w component stores the handedness of the vector.
+The tangent vector in model space. The x,y,z components store the tangent, and the w component stores the handedness of normal/tangent. The handedness should be used to invert the bitangent in cases where a texture is mirrored and the cross product of the normal and tangent vectors would produce an inverted bitangent vector. For example:
+
+```glsl
+vec3 normal = gl_NormalMatrix * gl_Normal;
+vec3 tangent = gl_NormalMatrix * at_tangent.xyz;
+
+vec3 bitangent = cross(tangent, normal) * at_tangent.w;
+```
