add gbuffers guide

--- a/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
@@ -11,7 +11,7 @@ This tutorial is based on one written by [saada2006](https://saada2006.github.io
 
 ## Prerequisites
 :::caution[Warning]
-**This tutorial is designed for people who already know how to code. If you do not know how to code, you will likely struggle with this tutorial.** A general understanding of how computer graphics work is useful but not necessary.
+**This tutorial is designed for people who already know how to code. If you do not know how to code, you will likely struggle with this tutorial.** A general understanding of how computer graphics work is useful but not necessary. For this reason, at times, you may not be shown all of the code. This is to ensure you are reading enough to understand what you are doing. All of the necessary information is provided for you to achieve the intended end result.
 :::
 
 You will need:
