--- a/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
@@ -20,7 +20,7 @@ Minecraft shaders require a specific structure of files in the right places to l
                 └── ...
 ```
 
-In this stage of the tutorial, we are going to make the screen monochrome, so let's rename the `Base-330-main` folder to `monochrome`, or another name of your choosing.
+In this stage of the tutorial, we are going to make the screen monochrome using the `composite` pass, so let's rename the `Base-330-main` folder to `composite-tutorial`, or another name of your choosing.
 
 You can also delete the `LICENSE` and `readme.md` files, as we don't need those.
 
