add info for logs in vanilla launcher

--- a/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
@@ -20,7 +20,8 @@ You will need:
 - A willingness to learn. Shaders are hard, and you can't just pick them up overnight. Do not expect to complete this tutorial and become the next Sonic Ether.
 - An instance of Minecraft with Iris, Optifine, or Oculus installed. Since this tutorial is in the Iris documentation, it is assumed you are using Iris.
 
-It is recommended that you use a Minecraft launcher which supports viewing the logs in realtime. One such choice is [Prism Launcher](https://prismlauncher.org/).
+It's helpful to be able to see your game logs as the game is running. In the vanilla Minecraft launcher, you can do this by enabling 'keep the Launcher open while games are running' and 'Open output log when Minecraft: Java Edition starts" in the settings.
+If you do not use the vanilla launcher, but your launcher does not support viewing logs in realtime, a popular choice is [Prism Launcher](https://prismlauncher.org/).
 In Iris, it is also useful to enable debug mode. You can do this by pressing <kbd>Ctrl</kbd>+<kbd>D</kbd> in the shader selection screen.
 
 
