--- a/src/content/docs/reference/Constants/rendertargets.mdx
+++ b/src/content/docs/reference/Constants/rendertargets.mdx
@@ -10,7 +10,7 @@ sidebar:
 
 #### Location: any fragment stage (.fsh) of any program
 
-This directive is used to configure which color attachments a fragment program outputs to. Replace `X,Y,Z` with the comma separated list of indices of color attachments. For example, putting `/* RENDERTARGETS: 0,3,7,13 */` in `composite.fsh` would configure that program to write to `colortex0`, `colortex3`, `colortex7`, and `colortex13`. The comment can be placed anywhere in the `.fsh` file. If the directive (or the [`DRAWBUFFERS`](/reference/constants/drawbuffers) directive) is not found in the file, the first 8 buffers will be bound.
+This directive is used to configure which color attachments a fragment program outputs to. Replace `X,Y,Z` with the comma separated list of indices of color attachments. For example, putting `/* RENDERTARGETS: 0,3,7,13 */` in `composite.fsh` would configure that program to write to `colortex0`, `colortex3`, `colortex7`, and `colortex13`. The comment can be placed anywhere in the `.fsh` file. If the directive (or the [`DRAWBUFFERS`](/reference/constants/drawbuffers) directive) is not found in the file, the first 8 buffers will be bound in order.
 
 **Note**: This directive must include the multi-line comments and should be on its own line.
 
