--- a/src/content/docs/reference/Buffers/custom_textures.mdx
+++ b/src/content/docs/reference/Buffers/custom_textures.mdx
@@ -64,4 +64,4 @@ Hardware bilinear filtering and wrapping/clamping behavior can be controlled wit
 - `blur` controls texture filtering, `true` is bilinear, `false` is nearest neighbor
 - `clamp` controls edge behavior, `true` clamps at the edges, `false` wraps at the edges
 
-By default, image files will use nearest neighbor and wrapping, and raw textures will use bilinear filtering and clamping.
+By default, image files will use nearest neighbor and wrapping, and raw textures will use bilinear filtering and clamping. Shader provided mcmeta files cannot be used for resource pack / atlas textures.
