Feat: ovrrview: first draft of welcome

--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Welcome
 description: About the docs
 tableOfContents: false
 sidebar:
@@ -8,6 +8,12 @@ sidebar:
 ---
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+
+To the Iris docs!
+
+I jope tour journey here was a food one, and that you have come to the right place. If you are here because you are a shader developer or want ro become one, your in the right place. If not, I hope you find what you are looking for.
+
+================
 
 ## Core Reference
 
