--- a/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
+++ b/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
@@ -1,6 +1,6 @@
 ---
 title: blockEntityId
-description: blockEntityId
+description: This uniform stores the ID of the current block entity (a tile entity).
 sidebar:
   label: blockEntityId
   order: 1
