add some uniform descriptions

--- a/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
+++ b/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
@@ -1,6 +1,6 @@
 ---
 title: alphaTestRef
-description: alphaTestRef
+description: The alpha value that Iris recommends you discard pixels below.
 sidebar:
   label: alphaTestRef
   order: 1
