--- a/src/content/docs/reference/Uniforms/General/ambientLight.mdx
+++ b/src/content/docs/reference/Uniforms/General/ambientLight.mdx
@@ -1,6 +1,6 @@
 ---
 title: ambientLight
-description: ambientLight
+description: The ambient light property of the current dimension.
 sidebar:
   label: ambientLight
   order: 1
