--- a/src/content/docs/reference/Uniforms/General/atlasSize.mdx
+++ b/src/content/docs/reference/Uniforms/General/atlasSize.mdx
@@ -1,6 +1,6 @@
 ---
 title: atlasSize
-description: atlasSize
+description: The size of the texture atlas.
 sidebar:
   label: atlasSize
   order: 1
