--- a/src/content/docs/reference/Uniforms/General/bedrockLevel.mdx
+++ b/src/content/docs/reference/Uniforms/General/bedrockLevel.mdx
@@ -1,6 +1,6 @@
 ---
 title: bedrockLevel
-description: bedrockLevel
+description: The Y coordinate of the bedrock floor in the current dimension.
 sidebar:
   label: bedrockLevel
   order: 1
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform int bedrockLevel;`
 
-This value stores the height (y coordinate) of the bedrock floor in current dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "min_y".
+This value stores the height (y coordinate) of the bedrock floor in the current dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "min_y".
