--- a/src/content/docs/reference/Uniforms/General/biome.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome.mdx
@@ -1,6 +1,6 @@
 ---
 title: biome
-description: biome
+description: The biome currently occupied by the player.
 sidebar:
   label: biome
   order: 1
