--- a/src/content/docs/reference/Uniforms/General/biome_category.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_category.mdx
@@ -1,6 +1,6 @@
 ---
 title: biome_category
-description: biome_catagory
+description: The category of the biome currently occupied by the player.
 sidebar:
   label: biome_catagory
   order: 1
