--- a/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
@@ -1,6 +1,6 @@
 ---
 title: biome_precipitation
-description: biome_percipitation
+description: The type of precipitation that occurs in the biome currently occupied by the player.
 sidebar:
   label: biome_precipitation
   order: 1
