--- a/src/content/docs/reference/Uniforms/General/blendFunc.mdx
+++ b/src/content/docs/reference/Uniforms/General/blendFunc.mdx
@@ -1,6 +1,6 @@
 ---
 title: blendFunc
-description: blendFunc
+description: The alpha blending function multipliers for the current program.
 sidebar:
   label: blendFunc
   order: 1
