--- a/src/content/docs/reference/Uniforms/General/cameraPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: cameraPosition
-description: cameraPosition
+description: The position of the camera in world space.
 sidebar:
   label: cameraPosition
   order: 1
