--- a/src/content/docs/reference/Uniforms/General/cameraPositionFract.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPositionFract.mdx
@@ -1,6 +1,6 @@
 ---
 title: cameraPositionFract
-description: cameraPositionFract
+description: The fractional component of the position of the camera in world space.
 sidebar:
   label: cameraPositionFract
   order: 1
