--- a/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
+++ b/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
@@ -1,6 +1,6 @@
 ---
 title: centerDepthSmooth
-description: centerDepthSmooth
+description: The value in the depth buffer at the center of the screen, smoothed over time.
 sidebar:
   label: centerDepthSmooth
   order: 1
