--- a/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
@@ -1,6 +1,6 @@
 ---
 title: cloudHeight
-description: cloudHeight
+description: The Y coordinate of the vanilla cloud plane.
 sidebar:
   label: cloudHeight
   order: 1
