--- a/src/content/docs/reference/Uniforms/General/constantMood.mdx
+++ b/src/content/docs/reference/Uniforms/General/constantMood.mdx
@@ -1,6 +1,6 @@
 ---
 title: constantMood
-description: constantMood
+description: Equivalent to playerMood, however once it reaches 1.0 it does not reset to 0.
 sidebar:
   label: constantMood
   order: 1
