--- a/src/content/docs/reference/Uniforms/General/currentColorSpace.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentColorSpace.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentColorSpace
-description: currentColorSpace
+description: The color space used when displaying to the screen, as controlled through the video settings.
 sidebar:
   label: currentColorSpace
   order: 1
