--- a/src/content/docs/reference/Uniforms/General/currentDate.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentDate.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentDate
-description: currentDate
+description: The system date reported by the OS.
 sidebar:
   label: currentDate
   order: 1
