--- a/src/content/docs/reference/Uniforms/General/currentPlayerAir.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerAir.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentPlayerAir
-description: currentPlayerAir
+description: The amount of air the player has remaining, ranging 0 to 1.
 sidebar:
   label: currentPlayerAir
   order: 1
