--- a/src/content/docs/reference/Uniforms/General/currentPlayerHealth.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerHealth.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentPlayerHealth
-description: currentPlayerHealth
+description: The amount of health the player has remaining, ranging from 0 to 1.
 sidebar:
   label: currentPlayerHealth
   order: 1
