--- a/src/content/docs/reference/Uniforms/General/currentPlayerHunger.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerHunger.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentPlayerHunger
-description: currentPlayerHunger
+description: The player's hunger level ranging from 0 to 1.
 sidebar:
   label: currentPlayerHunger
   order: 1
