--- a/src/content/docs/reference/Uniforms/General/currentRenderedItemId.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentRenderedItemId.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentRenderedItemId
-description: currentRenderedItemId
+description: The item ID of whatever is being currently rendered (i.e armor and items).
 sidebar:
   label: currentRenderedItemId
   order: 1
