--- a/src/content/docs/reference/Uniforms/General/currentSelectedBlockId.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentSelectedBlockId.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentSelectedBlockId
-description: currentSelectedBlockId
+description: The block ID of the block currently selected by the player.
 sidebar:
   label: currentSelectedBlockId
   order: 1
