--- a/src/content/docs/reference/Uniforms/General/currentSelectedBlockPos.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentSelectedBlockPos.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentSelectedBlockPos
-description: currentSelectedBlockPos
+description: The player space position of the center of the block currently selected by the player.
 sidebar:
   label: currentSelectedBlockPos
   order: 1
