--- a/src/content/docs/reference/Uniforms/General/blindness.mdx
+++ b/src/content/docs/reference/Uniforms/General/blindness.mdx
@@ -1,6 +1,6 @@
 ---
 title: blindness
-description: blindness
+description: The blindness effect as a multiplier from 0 to 1.
 sidebar:
   label: blindness
   order: 1
