--- a/src/content/docs/reference/Uniforms/General/cameraPositionInt.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPositionInt.mdx
@@ -1,6 +1,6 @@
 ---
 title: cameraPositionInt
-description: cameraPositionInt
+description: The integer component of the position of the camera in world space.
 sidebar:
   label: cameraPositionInt
   order: 1
